--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -10,10 +10,15 @@
     }
   }
   &__hamburger {
-    img {
-      width: 1.4375rem; // 23px
-      height: 0.6875rem; // 11px
-    }
+    width: 1.4375rem; // 23px
+    height: 0.6875rem; // 11px
+    background-image: url(/images/icon-hamburger.svg);
+  }
+  &__hamburger-close {
+    width: 1.25rem; // 23px
+    height: 1.19rem; // 11px
+    background-repeat: no-repeat;
+    background-image: url(/images/icon-close.svg);
   }
 
   &__links {
