--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -2,10 +2,25 @@
   from {
     opacity: 0;
   }
-  1% {
-    opacity: 0;
-  }
   to {
     opacity: 1;
   }
+}
+
+.fade-in {
+  animation: fade-in 300ms ease-in-out forwards;
+}
+
+@keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+.fade-out {
+  animation: fade-out 300ms ease-in-out forwards;
 }
