--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -41,6 +41,14 @@ a:hover {
   }
 }
 
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .hidden {
   display: none;
+}
+.noscroll {
+  overflow: hidden;
 }
