--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -22,10 +22,35 @@ body {
   line-height: 1.3;
 }
 
+h1,
+h2,
+h3 {
+  margin-top: 0;
+}
+
 a,
 a:visited,
 a:hover {
   text-decoration: none;
+}
+
+// Buttons
+.button {
+  display: inline-block;
+  padding: 0.875rem 2.1875rem;
+  color: aliceblue;
+  background: linear-gradient(to right, $limeGreen, $brightCyan);
+  font-weight: 400;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  color: $white;
+  font-weight: 400;
+  font-size: $font-sm;
+  transform: opacity 300ms ease-in-out;
+  &:hover {
+    opacity: 0.75;
+  }
 }
 
 .flex {
@@ -42,8 +67,10 @@ a:hover {
 }
 
 .container {
-  padding-left: 1.5rem;
+  padding-top: 2.25rem;
   padding-right: 1.5rem;
+  padding-bottom: 2.25rem;
+  padding-left: 1.5rem;
 }
 
 .hidden {
