--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -18,7 +18,6 @@ body {
     size: $font-md;
     family: "Public Sans", sans-serif;
   }
-
   line-height: 1.3;
 }
 
@@ -26,6 +25,14 @@ h1,
 h2,
 h3 {
   margin-top: 0;
+  font-weight: 300;
+  font-size: 2.31rem;
+  line-height: 1.15;
+  color: $darkBlue;
+  margin-bottom: 1.5rem;
+  @include breakpoint-up(large) {
+    font-size: $font-xl;
+  }
 }
 
 a,
@@ -67,10 +74,35 @@ a:hover {
 }
 
 .container {
-  padding-top: 2.25rem;
-  padding-right: 1.5rem;
-  padding-bottom: 2.25rem;
-  padding-left: 1.5rem;
+  max-width: 69.375rem;
+  margin: 0 auto;
+
+  &--p {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  &--py {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+  }
+  &--px {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  &--pt {
+    padding-top: 2.25rem;
+  }
+  &--pr {
+    padding-right: 1.5rem;
+  }
+  &--pb {
+    padding-bottom: 2.25rem;
+  }
+  &--pl {
+    padding-left: 1.5rem;
+  }
 }
 
 .hidden {
