--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,6 +1,13 @@
 .hero {
   background-color: $veryLightGray;
 
+  .container {
+    @include breakpoint-up(large) {
+      display: flex;
+      align-items: center;
+    }
+  }
+
   &__image {
     position: relative;
     background-image: url("/images/bg-intro-mobile.svg");
@@ -9,31 +16,68 @@
     background-position: center center;
     min-height: 17.5rem;
 
+    @include breakpoint-up(medium) {
+      min-height: 25rem;
+      background-position: center 70%;
+    }
+
+    @include breakpoint-up(large) {
+      flex: 3;
+      order: 2;
+      height: 41rem;
+      background-image: none;
+    }
+
+    &::before,
+    &::after {
+      //border: 1px solid magenta;
+    }
+
     &::before {
+      @include breakpoint-up(large) {
+        content: "";
+        position: absolute;
+        height: 104%;
+        background-image: url(/images/bg-intro-desktop.svg);
+        background-repeat: no-repeat;
+        background-position: center bottom;
+        width: 150%;
+        background-size: 140%;
+        background-position: 8% 70%;
+      }
+    }
+
+    &::after {
       content: "";
       position: absolute;
       width: 100%;
       height: 100%;
       background-image: url("/images/image-mockups.png");
-      background-size: 93%;
+      background-size: 95%;
       background-repeat: no-repeat;
       background-position: center bottom;
+
+      @include breakpoint-up(medium) {
+        background-size: 52%;
+      }
+
+      @include breakpoint-up(large) {
+        width: 120%;
+        height: 122%;
+        background-size: 104%;
+        background-position: -330% 78%;
+        left: 30%;
+      }
     }
   }
 
   &__text {
     text-align: center;
-    h1 {
-      font-weight: 300;
-      font-size: 2.31rem;
-      line-height: 1.15;
-      color: $darkBlue;
-      margin-bottom: 1.5rem;
-    }
-    p {
-      line-height: 1.5;
-      margin-bottom: 2.25rem;
-      font-size: $font-sm;
+
+    @include breakpoint-up(large) {
+      flex: 2;
+      order: 1;
+      text-align: left;
     }
   }
 }
