--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,7 +1,39 @@
 .header {
+  position: relative;
+  z-index: 1;
+
+  // Hamburger Open Styles
+  &.open {
+    .header__toggle {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .overlay {
+    opacity: 0;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-image: linear-gradient($darkBlue, transparent);
+  }
+
   nav {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+    position: relative;
+    background-color: $white;
+    padding-top: 1.0625rem;
+    padding-bottom: 1.0625rem;
   }
 
   &__logo {
@@ -10,16 +42,22 @@
       height: 1.375rem;
     }
   }
-  &__hamburger {
-    width: 1.4375rem; // 23px
-    height: 0.6875rem; // 11px
-    background-image: url(/images/icon-hamburger.svg);
-  }
-  &__hamburger-close {
-    width: 1.25rem; // 20px
-    height: 1.19rem; // 19px
-    background-repeat: no-repeat;
-    background-image: url(/images/icon-close.svg);
+
+  &__toggle {
+    // Mobile Menu Toggle
+
+    > span {
+      display: block;
+      width: 26px;
+      height: 2px;
+      background-color: $darkBlue;
+      transition: all 300ms ease-in-out;
+      transform-origin: 3px 1px;
+
+      &:not(:last-child) {
+        margin-bottom: 5px;
+      }
+    }
   }
 
   &__menu {
@@ -31,6 +69,7 @@
     margin-top: 1.5rem;
     padding: 1.625rem;
     border-radius: 5px;
+
     a {
       display: block;
       padding: 0.625rem;
@@ -38,12 +77,13 @@
       text-align: center;
     }
   }
+
   &__links {
     a {
       position: relative;
-      color: $grayishBlue;
       font-size: $font-sm;
-      transition: color 200ms ease-in-out;
+      color: $grayishBlue;
+      transition: color 300ms ease-in-out;
 
       &:not(:last-child) {
         margin-right: 32px;
@@ -63,32 +103,11 @@
       }
       &:hover {
         color: $darkBlue;
+
         &::before {
           opacity: 1;
         }
       }
     }
-  }
-}
-
-// overlay
-.overlay {
-  position: fixed;
-  top: 3.8rem;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background-image: linear-gradient($darkBlue, transparent);
-}
-
-// visibility
-.hide-for-mobile {
-  @include breakpoint-down(medium) {
-    display: none;
-  }
-}
-.hide-for-desktop {
-  @include breakpoint-up(large) {
-    display: none;
   }
 }
