--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -26,6 +26,8 @@
       order: 2;
       height: 41rem;
       background-image: none;
+      //background-image: url('/images/bg-intro-desktop.svg');
+      //background-position: left center;
     }
 
     &::before,
@@ -37,13 +39,13 @@
       @include breakpoint-up(large) {
         content: "";
         position: absolute;
-        height: 104%;
-        background-image: url(/images/bg-intro-desktop.svg);
+        height: 100%;
+        background-image: url("/images/bg-intro-desktop.svg");
         background-repeat: no-repeat;
         background-position: center bottom;
         width: 150%;
-        background-size: 140%;
-        background-position: 10% 60%;
+        background-size: 122%;
+        background-position: 0% 83%;
       }
     }
 
@@ -53,7 +55,7 @@
       width: 100%;
       height: 100%;
       background-image: url("/images/image-mockups.png");
-      background-size: 95%;
+      background-size: 93%;
       background-repeat: no-repeat;
       background-position: center bottom;
 
@@ -64,9 +66,9 @@
       @include breakpoint-up(large) {
         width: 120%;
         height: 122%;
-        background-size: 104%;
-        background-position: -330% 78%;
-        left: 30%;
+        background-size: 94%;
+        background-position: center 150%;
+        left: 22%;
       }
     }
   }
